--- a/index.ipynb
+++ b/index.ipynb
@@ -222,6 +222,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
+    "travel\n",
     "def capitalize_countries():\n",
     "    for i in travel_destinations:\n",
     "        travel_destinations[i] = travel_destinations[i].title()\n",
