--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "travel_destinations_indices = list(range(0,len(traveldes))\n",
+    "travel_destinations_indices = list(range(0,len(travel_destinations)))\n",
     "def capitalize_countries():\n",
     "    for i in travel_destinations:\n",
     "        travel_destinations[i] = travel_destinations[i].title()\n",
